fix: frist commit

--- a/.env.test
+++ b/.env.test
@@ -1,1 +1,8 @@
-NEXT_PUBLIC_WAVE_BASE_URL=https://api.testnet.wavemall.io
+###
+ # @Author:  
+ # @Date: 2022-10-13 10:58:35
+ # @LastEditors:  
+ # @LastEditTime: 2024-01-13 21:44:23
+ # @FilePath: /nextjs-webiste/.env.test
+### 
+NEXT_PUBLIC_API_BASE_URL=https://api-test.mtmt.io/api/v1/user
