--- a/.env.prod
+++ b/.env.prod
@@ -1,1 +1,8 @@
-NEXT_PUBLIC_WAVE_BASE_URL=https://api.wavemall.io
+###
+ # @Author:  
+ # @Date: 2022-10-13 10:58:41
+ # @LastEditors:  
+ # @LastEditTime: 2024-01-13 21:44:14
+ # @FilePath: /nextjs-webiste/.env.prod
+### 
+NEXT_PUBLIC_API_BASE_URL=https://api.mtmt.io/api/v1/user
