--- a/package.json
+++ b/package.json
@@ -13,23 +13,29 @@
     "commit": "cz"
   },
   "dependencies": {
-    "@headlessui/react": "^1.5.0",
-    "@heroicons/react": "^1.0.5",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "@sentry/nextjs": "^7.15.0",
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.4",
-    "axios": "^1.1.2",
+    "axios": "^1.6.5",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2",
     "i18next": "^21.8.0",
-    "js-base64": "^3.7.2",
-    "next": "^12.1.0",
+    "js-base64": "^3.7.5",
+    "next": "^14.0.4",
     "next-themes": "^0.1.1",
     "postcss": "^8.4.12",
-    "react": "17.0.2",
+    "prettier": "^3.2.1",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "react": "^18.2.0",
     "react-device-detect": "^2.1.2",
-    "react-dom": "17.0.2",
-    "react-i18next": "^11.16.9",
-    "sass": "^1.35.2",
-    "tailwindcss": "^3.0.17"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.0",
+    "react-use": "^17.4.2",
+    "sass": "^1.69.7",
+    "tailwindcss": "^3.4.1",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
@@ -41,8 +47,6 @@
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
     "husky": "^8.0.1",
-    "prettier": "2.6.1",
-    "prettier-plugin-tailwindcss": "^0.1.8",
     "typescript": "4.6.3"
   },
   "config": {
